Rewrite flightcontrol step01-17 READMEs as task-focused JEP descriptions (goal/build/test-data/hints; drop solution references)